src/test/deca/context/invalid/operation-binaire-equals-wrong-null.deca
// Description:
//    Test 3.33 fail avec equals avec un null et un int
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : A class (or null) can only be compared to another class (rule 3.33)
//
// Historique:
//    cree le 06/01/2023

{
    null == 1;
}